feat：调整环境变量，为nacos兼容多种数据库做准备（作者只准备兼容postgresql和mysql）

--- a/doc/deploy/env/nacos.env
+++ b/doc/deploy/env/nacos.env
@@ -1,9 +1,11 @@
-MYSQL_HOST=mysql.laokou.org
-MYSQL_PORT=3306
-MYSQL_DB_NACOS=kcloud_platform_alibaba_nacos
-MYSQL_USERNAME=root
-MYSQL_PASSWORD=laokou123
-MYSQL_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+DATASOURCE_HOST=mysql.laokou.org
+DATASOURCE_PORT=3306
+DATASOURCE_DB_NACOS=kcloud_platform_alibaba_nacos
+DATASOURCE_USERNAME=root
+DATASOURCE_PASSWORD=laokou123
+DATASOURCE_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
+DATASOURCE_PLATFORM=mysql
 JASYPT_ENCRYPTOR_PASSWORD=5201314wumeihua
 TZ=Asia/Shanghai
 LANG=zh_CN.UTF-8
