--- a/pom.xml
+++ b/pom.xml
@@ -170,11 +170,16 @@
             <properties>
                 <DATASOURCE-USERNAME>root</DATASOURCE-USERNAME>
                 <DATASOURCE-PASSWORD>laokou123</DATASOURCE-PASSWORD>
-                <DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>
-                <DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>
-                <DATASOURCE-PORT>3306</DATASOURCE-PORT>
-                <DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>
-                <DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>
+                <!--<DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>-->
+                <DATASOURCE-HOST>postgresql.laokou.org</DATASOURCE-HOST>
+                <!--<DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>-->
+                <DATASOURCE-PARAM>tcpKeepAlive=true&amp;reWriteBatchedInserts=true&amp;ApplicationName=laokou-register&amp;useSSL=false</DATASOURCE-PARAM>
+                <!--<DATASOURCE-PORT>3306</DATASOURCE-PORT>-->
+                <DATASOURCE-PORT>5432</DATASOURCE-PORT>
+                <!--<DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>-->
+                <DATASOURCE-DRIVER-CLASS-NAME>org.postgresql.Driver</DATASOURCE-DRIVER-CLASS-NAME>
+                <!--<DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>-->
+                <DATASOURCE-PLATFORM>postgresql</DATASOURCE-PLATFORM>
                 <DATASOURCE-DB-NACOS>kcloud_platform_alibaba_nacos</DATASOURCE-DB-NACOS>
                 <DATASOURCE-DB-SEATA>kcloud_platform_alibaba_seata</DATASOURCE-DB-SEATA>
                 <DATASOURCE-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</DATASOURCE-DB-XXL-JOB>
@@ -206,11 +211,16 @@
             <properties>
                 <DATASOURCE-USERNAME>ENC(aEwhK+oj5wQ/pJfRcfwXAw==)</DATASOURCE-USERNAME>
                 <DATASOURCE-PASSWORD>ENC(gruSGjDZ03lAN3qyE5UisGE2tvN3gS3Y)</DATASOURCE-PASSWORD>
-                <DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>
-                <DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>
-                <DATASOURCE-PORT>3306</DATASOURCE-PORT>
-                <DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>
-                <DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>
+                <!--<DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>-->
+                <DATASOURCE-HOST>postgresql.laokou.org</DATASOURCE-HOST>
+                <!--<DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>-->
+                <DATASOURCE-PARAM>tcpKeepAlive=true&amp;reWriteBatchedInserts=true&amp;ApplicationName=laokou-register&amp;useSSL=false</DATASOURCE-PARAM>
+                <!--<DATASOURCE-PORT>3306</DATASOURCE-PORT>-->
+                <DATASOURCE-PORT>5432</DATASOURCE-PORT>
+                <!--<DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>-->
+                <DATASOURCE-DRIVER-CLASS-NAME>org.postgresql.Driver</DATASOURCE-DRIVER-CLASS-NAME>
+                <!--<DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>-->
+                <DATASOURCE-PLATFORM>postgresql</DATASOURCE-PLATFORM>
                 <DATASOURCE-DB-NACOS>kcloud_platform_alibaba_nacos</DATASOURCE-DB-NACOS>
                 <DATASOURCE-DB-SEATA>kcloud_platform_alibaba_seata</DATASOURCE-DB-SEATA>
                 <DATASOURCE-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</DATASOURCE-DB-XXL-JOB>
@@ -244,7 +254,7 @@
                 <!--suppress UnresolvedMavenProperty -->
                 <DATASOURCE-HOST>${DATASOURCE_HOST:mysql.laokou.org}</DATASOURCE-HOST>
                 <!--suppress UnresolvedMavenProperty -->
-                <DATASOURCE-PARAM>${DATASOURCE_PARAM:}</DATASOURCE-PARAM>
+                <DATASOURCE-PARAM>${DATASOURCE_PARAM:characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true}</DATASOURCE-PARAM>
                 <!--suppress UnresolvedMavenProperty -->
                 <DATASOURCE-PORT>${DATASOURCE_PORT:3306}</DATASOURCE-PORT>
                 <!--suppress UnresolvedMavenProperty -->
@@ -276,7 +286,7 @@
                 <!--suppress UnresolvedMavenProperty -->
                 <SEATA-PASSWORD>${SEATA_PASSWORD:seata}</SEATA-PASSWORD>
                 <!--suppress UnresolvedMavenProperty -->
-                <SEATA-LOG-PATH>${SEATA_LOG_PATH:}</SEATA-LOG-PATH>
+                <SEATA-LOG-PATH>${SEATA_LOG_PATH:/opt}</SEATA-LOG-PATH>
                 <!--suppress UnresolvedMavenProperty -->
                 <SENTINEL-USERNAME>${SENTINEL_USERNAME:sentinel}</SENTINEL-USERNAME>
                 <!--suppress UnresolvedMavenProperty -->
