--- a/pom.xml
+++ b/pom.xml
@@ -170,16 +170,16 @@
             <properties>
                 <DATASOURCE-USERNAME>root</DATASOURCE-USERNAME>
                 <DATASOURCE-PASSWORD>laokou123</DATASOURCE-PASSWORD>
-                <!--<DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>-->
-                <DATASOURCE-HOST>postgresql.laokou.org</DATASOURCE-HOST>
-                <!--<DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>-->
-                <DATASOURCE-PARAM>tcpKeepAlive=true&amp;reWriteBatchedInserts=true&amp;ApplicationName=laokou-register&amp;useSSL=false</DATASOURCE-PARAM>
-                <!--<DATASOURCE-PORT>3306</DATASOURCE-PORT>-->
-                <DATASOURCE-PORT>5432</DATASOURCE-PORT>
-                <!--<DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>-->
-                <DATASOURCE-DRIVER-CLASS-NAME>org.postgresql.Driver</DATASOURCE-DRIVER-CLASS-NAME>
-                <!--<DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>-->
-                <DATASOURCE-PLATFORM>postgresql</DATASOURCE-PLATFORM>
+                <DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>
+                <!--<DATASOURCE-HOST>postgresql.laokou.org</DATASOURCE-HOST>-->
+                <DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>
+                <!--<DATASOURCE-PARAM>tcpKeepAlive=true&amp;reWriteBatchedInserts=true&amp;ApplicationName=laokou-register&amp;useSSL=false</DATASOURCE-PARAM>-->
+                <DATASOURCE-PORT>3306</DATASOURCE-PORT>
+                <!--<DATASOURCE-PORT>5432</DATASOURCE-PORT>-->
+                <DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>
+                <!--<DATASOURCE-DRIVER-CLASS-NAME>org.postgresql.Driver</DATASOURCE-DRIVER-CLASS-NAME>-->
+                <DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>
+                <!--<DATASOURCE-PLATFORM>postgresql</DATASOURCE-PLATFORM>-->
                 <DATASOURCE-DB-NACOS>kcloud_platform_alibaba_nacos</DATASOURCE-DB-NACOS>
                 <DATASOURCE-DB-SEATA>kcloud_platform_alibaba_seata</DATASOURCE-DB-SEATA>
                 <DATASOURCE-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</DATASOURCE-DB-XXL-JOB>
@@ -211,16 +211,16 @@
             <properties>
                 <DATASOURCE-USERNAME>ENC(aEwhK+oj5wQ/pJfRcfwXAw==)</DATASOURCE-USERNAME>
                 <DATASOURCE-PASSWORD>ENC(gruSGjDZ03lAN3qyE5UisGE2tvN3gS3Y)</DATASOURCE-PASSWORD>
-                <!--<DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>-->
-                <DATASOURCE-HOST>postgresql.laokou.org</DATASOURCE-HOST>
-                <!--<DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>-->
-                <DATASOURCE-PARAM>tcpKeepAlive=true&amp;reWriteBatchedInserts=true&amp;ApplicationName=laokou-register&amp;useSSL=false</DATASOURCE-PARAM>
-                <!--<DATASOURCE-PORT>3306</DATASOURCE-PORT>-->
-                <DATASOURCE-PORT>5432</DATASOURCE-PORT>
-                <!--<DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>-->
-                <DATASOURCE-DRIVER-CLASS-NAME>org.postgresql.Driver</DATASOURCE-DRIVER-CLASS-NAME>
-                <!--<DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>-->
-                <DATASOURCE-PLATFORM>postgresql</DATASOURCE-PLATFORM>
+                <DATASOURCE-HOST>mysql.laokou.org</DATASOURCE-HOST>
+                <!--<DATASOURCE-HOST>postgresql.laokou.org</DATASOURCE-HOST>-->
+                <DATASOURCE-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai&amp;allowPublicKeyRetrieval=true</DATASOURCE-PARAM>
+                <!--<DATASOURCE-PARAM>tcpKeepAlive=true&amp;reWriteBatchedInserts=true&amp;ApplicationName=laokou-register&amp;useSSL=false</DATASOURCE-PARAM>-->
+                <DATASOURCE-PORT>3306</DATASOURCE-PORT>
+                <!--<DATASOURCE-PORT>5432</DATASOURCE-PORT>-->
+                <DATASOURCE-DRIVER-CLASS-NAME>com.mysql.cj.jdbc.Driver</DATASOURCE-DRIVER-CLASS-NAME>
+                <!--<DATASOURCE-DRIVER-CLASS-NAME>org.postgresql.Driver</DATASOURCE-DRIVER-CLASS-NAME>-->
+                <DATASOURCE-PLATFORM>mysql</DATASOURCE-PLATFORM>
+                <!--<DATASOURCE-PLATFORM>postgresql</DATASOURCE-PLATFORM>-->
                 <DATASOURCE-DB-NACOS>kcloud_platform_alibaba_nacos</DATASOURCE-DB-NACOS>
                 <DATASOURCE-DB-SEATA>kcloud_platform_alibaba_seata</DATASOURCE-DB-SEATA>
                 <DATASOURCE-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</DATASOURCE-DB-XXL-JOB>
