--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -98,10 +98,12 @@ spring:
         # 关闭netty日志
         wiretap: false
         pool:
-          max-idle-time: 60s
+          # 连接池中连接的最大空闲时间
+          max-idle-time: 10m
           # 最大连接数
           max-connections: 10000
-          max-life-time: 60s
+          # 连接池中连接的最大存活时间
+          max-life-time: 5m
           # elastic   无线扩展的线程池（弹性线程池，连接数不可控）
           # fixed     固定数量线程池
           # disabled  不使用线程池（只有一个线程）
