style: 优化配置，增加注释，方便理解gateway配置

--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -69,14 +69,13 @@ spring:
             data-type: json
     # loadbalancer
     loadbalancer:
-      # 开启缓存，从本地内存里面取
-      # 关闭缓存，从redis里面取
       cache:
         caffeine:
           # 初始容量 => 30
           # 最大容量 => 4096
           # 淘汰规则 => 最后一次写操作后经过30s过期
           spec: initialCapacity=30,expireAfterWrite=30s,maximumSize=4096
+        # 开启缓存
         enabled: true
       nacos:
         # 开启Nacos路由负载均衡
