--- a/laokou-common/laokou-common-netty/pom.xml
+++ b/laokou-common/laokou-common-netty/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-i18n</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
