--- a/laokou-common/laokou-common-openfeign/pom.xml
+++ b/laokou-common/laokou-common-openfeign/pom.xml
@@ -43,6 +43,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-idempotent</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-sentinel</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
