fix: sentinel限流配置未生效，增加账号和密码即可

--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -67,6 +67,8 @@ spring:
             rule-type: gw_flow # 网关规则
             group-id: @NACOS-GROUP@
             data-type: json
+            username: @NACOS-USERNAME@
+            password: @NACOS-PASSWORD@
     # loadbalancer
     loadbalancer:
       cache:
