fix: sentinel熔断、降级、限流本地测试成功，bug修改完毕

--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -54,6 +54,8 @@ spring:
             data-type: json
             group-id: @NACOS-GROUP@
             rule-type: flow
+            username: @NACOS-USERNAME@
+            password: @NACOS-PASSWORD@
     # loadbalancer
     loadbalancer:
       nacos:
