--- a/laokou-cloud/laokou-sentinel/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-sentinel/src/main/resources/application.yml
@@ -26,7 +26,7 @@ server:
     session:
       cookie:
         name: sentinel_dashboard_cookie
-
+  shutdown: graceful
 spring:
   application:
     name: @pom.artifactId@
