--- a/laokou-cloud/laokou-seata/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-seata/src/main/resources/application.yml
@@ -26,6 +26,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: false
+  shutdown: graceful
 jasypt:
   encryptor:
     algorithm: PBEWithMD5AndDES
