--- a/doc/deploy/env/nacos.env
+++ b/doc/deploy/env/nacos.env
@@ -9,5 +9,5 @@ DATASOURCE_PLATFORM=mysql
 JASYPT_ENCRYPTOR_PASSWORD=5201314wumeihua
 TZ=Asia/Shanghai
 LANG=zh_CN.UTF-8
-JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC"
+JVM_OPTS="-Xmx256m -Xms256m -Xmn128m -XX:+UseG1GC"
 NACOS_OPTS="-Dnacos.standalone=true"
