--- a/doc/deploy/docker-compose.yml
+++ b/doc/deploy/docker-compose.yml
@@ -29,10 +29,10 @@ services:
       --collation-server=utf8mb4_general_ci
       --lower-case-table-names=1
     volumes:
-      # 请手动授予rw权限，不然写入文件
+      # 请手动授予rw权限，不然无法写入文件
       - ./mysql8/data:/var/lib/mysql
       - ./mysql8/conf/my.cnf:/etc/mysql/my.cnf
-      # 请手动授予rw权限，不然写入文件
+      # 请手动授予rw权限，不然无法写入文件
       - ./mysql8/logs:/var/log/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=laokou123
@@ -56,7 +56,7 @@ services:
       - "6379:6379"
     volumes:
       - ./redis7/conf/redis.conf:/etc/redis/redis.conf
-      # 请手动授予rw权限，不然写入文件
+      # 请手动授予rw权限，不然无法写入文件
       - ./redis7/data:/data
     command: redis-server --appendonly yes --requirepass 'laokou123'
     environment:
@@ -138,7 +138,7 @@ services:
       - "9300:9300"
     volumes:
       - ./elasticsearch8/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-      # 请手动授予rw权限，不然写入文件
+      # 请手动授予rw权限，不然无法写入文件
       - ./elasticsearch8/data:/usr/share/elasticsearch/data
       - ./elasticsearch8/logs:/usr/share/elasticsearch/logs
       - ./elasticsearch8/plugins:/usr/share/elasticsearch/plugins
