--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,8 @@
         <spring-framework.version>6.1.2</spring-framework.version>
         <!--cloud-alibaba版本-->
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
-        <!--spring-doc版本-->
-        <spring-doc.version>2.3.0</spring-doc.version>
+        <!--springdoc-openapi版本-->
+        <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
         <!--mapstruct版本-->
         <mapstruct.version>1.6.0.Beta1</mapstruct.version>
         <!--lombok-mapstruct-binding版本-->
@@ -117,11 +117,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!-- 定义 spring doc 版本 -->
+            <!-- 定义 springdoc openapi 版本 -->
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi</artifactId>
-                <version>${spring-doc.version}</version>
+                <version>${springdoc-openapi.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
