--- a/doc/deploy/nginx/conf/nginx.conf
+++ b/doc/deploy/nginx/conf/nginx.conf
@@ -45,6 +45,26 @@ http  {
 		add_header      Access-Control-Allow-Headers        ${http_access_control_request_headers};
 		add_header      X-Cache                             $upstream_cache_status;
 
+       location  /swagger-ui.html  {
+            proxy_pass              https://gateway.laokou.org:5555;
+            index                   index.html              index.htm;
+       }
+
+       location  /webjars  {
+       	    proxy_pass              https://gateway.laokou.org:5555;
+            index                   index.html              index.htm;
+       }
+
+       location  /swagger-resources  {
+            proxy_pass              https://gateway.laokou.org:5555;
+            index                   index.html              index.htm;
+       }
+
+       location  /v3  {
+            proxy_pass              https://gateway.laokou.org:5555;
+            index                   index.html              index.htm;
+       }
+
         location  /  {
             # 你的打包路径
             root                    /usr/share/nginx/dist;
