--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
@@ -57,3 +57,6 @@ spring:
           - data-id: application-common-rocketmq.yaml
             group: ${NACOS-GROUP}
             refresh: true
+          - data-id: application-common-flyway.yaml
+            group: ${NACOS-GROUP}
+            refresh: true
